fix: Disable Phone number linking in safari on IPhone

--- a/assets/styles/user/template.css
+++ b/assets/styles/user/template.css
@@ -129,7 +129,7 @@ footer > div {
     max-width: 1000px;
     width: 100%;
 }
-footer > div > .policies > ul {
+footer > div > .policies > ul, footer > div > .contacts > ul {
     padding: 0;
     list-style-type: none;
 }
